Popup: created a popup window - created a new component for popup - set popup to occupy the entire viewport - fixed the popup postion to be at top:0 left:0 - gave it a somewhat transparent background - gave it a high z-index so it goes on top of everything - set the width and height of &__content - centered &__content - added box-shadow, background-color and border-radius

--- a/css/style.css
+++ b/css/style.css
@@ -425,6 +425,24 @@ body {
 .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
   opacity: 1; }
 
+.popup {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0; }
+  .popup__content {
+    width: 75%;
+    height: 50rem;
+    background-color: #fff;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+
 .story {
   width: 75%;
   margin: 0 auto;
